# snowpylot

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  LemonsInTheSnowpack.ipynb  MASSIVE_DOWNLOAD_README.md  PREVIEW_FEATURE_SUMMARY.md  Pipfile  README.md  RQ2.ipynb  RQ2_.ipynb  StartingOut.ipynb  build-snow-pit.ipynb  caaml-parser.py  caaml_parser.py  coreInfo.py  definitions.py  download_progress.json  explore-caaml-structure.ipynb  layer-info-q1.ipynb  layer.py  location.py  locationInfo.py  massive_snowpit_download.py  metaData.py  pit-layer-v1.ipynb  play_with_snowpyt.ipynb  playing-around.ipynb  pyproject.toml  query_engine_fixes.py  setup.cfg  setup_and_test.py  setup_credentials.py  snow-pit.py  snowPilotObs.py  snowPit.py  snowProfile.py  snow_pit.py  stabilityTests.py  test-pit-object.ipynb  (+9 more)
.github/workflows/: docs.yml  release.yml  tests.yml
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: environment.pickle  index.doctree
_build/html/_sources/: index.rst.txt
_modules/snowpylot/: caaml_parser.html
api/: snowpylot.html
data/snowpits/: download_progress.json
data/snowpits/2020-01-15_2020-01-16_20250711_190915_pits/katisthebatis-snowpits-25-07-11-05-09/: snowpits-20555-caaml.xml  snowpits-20560-caaml.xml
data/snowpits/2020-01-16_2020-01-17_20250711_190930_pits/katisthebatis-snowpits-25-07-11-05-09/: snowpits-20895-caaml.xml  snowpits-20997-caaml.xml
data/snowpits/katisthebatis-snowpits-25-08-03-05-15/: snowpits-38435-caaml.xml
demos/: RQ2.ipynb  RQ2_.ipynb  demo_2020-2024.ipynb  global_snowpit_distribution.py  manual_chunking_example.py  pits_by_date.csv  query_testing.ipynb  query_testing.py  query_testing_filters.py  snowpit_distribution_by_country_2019_2020.html  stability_test_qtys.ipynb  summary-stats.ipynb  summary_stats_by_season.ipynb  test_fix.py  whumpf-dataset-summary.ipynb  wumph-dataset-summary.ipynb
demos/outdated/: LemonsInTheSnowpack.ipynb  RQ2.ipynb
demos/western_snow_conference/: MaryConnelly_Snowpylot.docx  author_instructions.md  example_paper.md  poster_abstract.md  snowpylot_conference_paper.docx  snowpylot_paper.md  wsc_paper_v1.docx  ~$c_paper_v1.docx  ~$owpylot_conference_paper.docx  ~$ryConnelly_Snowpylot.docx  ~WRL2258.tmp
docs/: query_engine_usage.md
docs/source/: conf.py  index.rst
docs/source/_autosummary/: snowpylot.caaml_parser.rst  snowpylot.coreInfo.rst  snowpylot.layer.rst  snowpylot.rst  snowpylot.snowPit.rst  snowpylot.snowProfile.rst  snowpylot.stabilityTests.rst  snowpylot.whumpfData.rst
docs/source/modules/: coreinfo.rst  layer.rst  parser.rst  snowprofile.rst  stabilitytests.rst  whumpfdata.rst
documentation/: crystal_forms.xlsx
examples/: preview_demo.py  query_engine_usage.py
packaging_tutorial/: pyproject.toml
snowpylot/: __init__.py  _init_.py  caaml_parser.py  snowPit.py  snowProfile.py  stabilityTests.py
snowpylot/demos/: RQ2.ipynb  global_snowpit_distribution.py  summary-stats.ipynb  test-pit-object.ipynb
snowpylot/docs/source/: conf.py
source/: conf.py
src/snowpylot/: __init__.py  caaml_parser.py  core_info.py  layer.py  manual_chunking.py  query_engine.py  snow_pilot_download.py  snow_profile.py  stabilityTests.py  stability_tests.py
tests/: QUERY_ENGINE_SUMMARY.md  coreInfo.py  test_caaml_parser.py  test_coreInfo.py  test_query_engine.py  test_snowProfile.py  test_snow_profile.py  test_stabilityTests.py  test_whumpfData.py
zz_old/: explore-caaml-structure.ipynb  zz_Layer.py  zz_build-snow-pit.ipynb  zz_caaml_parser.py  zz_layer-info-q1.ipynb  zz_location.py  zz_playing-around.ipynb  zz_snowPilotObs.py  zz_user.py
(+4815 files in other folders)
