[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowpylot"
version = "1.0.6"
description = "A Python library for working CAAML.XML files from SnowPilot"
readme = "README.md"
authors = [
  { name="Mary Kate Connelly", email="connellymarykate@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["snowpit", "caaml", "snowpilot"]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/connellymk/snowpylot"

[tool.bumpver]
current_version = "1.0.6"
version_pattern = "{semver}"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
    'current_version = "{version}"'
]
"README.md" = [
    'version = "{version}"'
]
"src/snowpylot/__init__.py" = [
    '__version__ = "{version}"'
]

#test