[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowpylot"
version = "1.0.6"
description = "A Python library for working CAAML.XML files from SnowPilot"
readme = "README.md"
authors = [
  { name="Mary Kate Connelly", email="connellymarykate@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["snowpit", "caaml", "snowpilot"]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/connellymk/snowpylot"


[tool.bumpversion]
current_version = "1.0.6"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "snowpylot/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"
